@@ -7,9 +7,8 @@
 <%@page contentType="text/html" pageEncoding="UTF-8"%>
 <%@page trimDirectiveWhitespaces="true" %>
 
-<%@taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 
-<canvas id="chart" width="${width}" height="${height}">
+<canvas id="chart" width="${options.width}" height="${options.height}">
 
 </canvas>
 
@@ -19,6 +18,8 @@
 
 
 <script type="text/javascript">
+	//http://www.chartjs.org/docs/
+	//https://www.sitepoint.com/introduction-chart-js-2-0-six-examples/
 	var jsonData = ${data};
 	var config = {};
 </script>
@@ -26,6 +27,6 @@
 <script type="text/javascript" src="${pageContext.request.contextPath}/js-templates/${templateFileName}"></script>
 
 <script type="text/javascript">
-	var ctx = document.getElementById("chart");
+	var ctx = $("#chart");
 	new Chart(ctx,config);
 </script>
